--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,3 +8,24 @@ body,
 html {
   height: 100%;
 }
+
+.legend i {
+  width: 18px;
+  height: 18px;
+  float: left;
+  margin-right: 10px;
+  opacity: 0.7;
+}
+
+.info {
+  padding: 10px 15px;
+  font: 14px/16px Arial, Helvetica, sans-serif;
+  background: white;
+  background: rgba(255,255,255,0.8);
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  border-radius: 5px;
+}
+.legend {
+  line-height: 18px;
+  color: #555;
+}
